--- a/pageRealSLanding/css/styles.css
+++ b/pageRealSLanding/css/styles.css
@@ -134,3 +134,56 @@ img {
         width: 20%;
     }
 }
+
+/* Header */
+
+header {
+    background-color: white;
+    box-shadow: 1.5px 1.5px 4px #b3b3b3;
+    height: 80px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1em;
+    transition: 600ms all ease-in-out;
+}
+header.transparente{
+    background-color: transparent;
+    box-shadow: none;
+}
+header img {
+    height: 60px;
+    width: auto;
+}
+
+header nav a {
+    color: #67666e;
+    font-weight: normal;
+    margin-left: 1em;
+    transition: 300ms ease-in-out all;
+}
+
+header.transparente nav a {
+    color: rgba(255, 255, 255, 0.9);
+}
+
+header nav a.activo,
+header nav a:hover {
+    color: #a97c50;
+    font-weight: bold;
+}
+header.transparente nav a.activo,
+header.transparente nav a:hover {
+    color: white;
+}
+
+/* Layout */
+.primera{
+    margin-top: 100vh;
+    
+}
