--- a/pageRealSLanding/css/styles.css
+++ b/pageRealSLanding/css/styles.css
@@ -548,3 +548,78 @@ footer .copyright {
     margin-bottom: 0;
     text-align: center;
 }
+
+/* Card */
+
+.fila.grid {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 360px);
+    grid-gap:1.5rem;
+    justify-content: center;
+}
+ 
+.card {
+    width: 360px;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 4px grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+.card img {
+    height: 280px;
+}
+.card .footer-card{
+    padding: 0.8rem;
+    width: 100%;
+    height: 174px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.card .footer-card p {
+    margin-bottom: 0.5rem;
+} 
+.card .footer-card p:first-child {
+    font-weight: bold;
+} 
+
+.card .footer-card a{
+    background-color: #a97c50;
+    color: white;
+    font-size: .8rem;
+    border-radius: .3rem;
+    padding: .5em 1em;
+    align-self: center;
+    transition: 200ms ease-in-out all;
+}
+.card .footer-card a:hover{
+    background-color: #664626;
+  
+}
+
+/* Ficha de propiedad  */
+.propiedad {
+    background-image: url('../img/property5.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+}
+
+.propiedad div:first-child {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.propiedad div:first-child p img {
+    width: 28px;
+    height: 28px;
+}
+.propiedad div:first-child h1 {
+    font-size: 1.4rem;
+    color: #a97c50;
+}
