--- a/pageRealSLanding/css/styles.css
+++ b/pageRealSLanding/css/styles.css
@@ -281,7 +281,9 @@ header.transparente nav a:hover {
     margin-top: 100vh;
 }
 
-#pr{
+#pr,
+#legal,
+#cookies{
     display: block;
     margin-top: -80px;
     padding-bottom: 80px ;
@@ -290,6 +292,9 @@ header.transparente nav a:hover {
 .fila {
     display: flex;
     padding: 2rem 1rem;
+}
+.fila.contacto{
+    margin-top: 80px;
 }
 .col-100 {
     width: 100%;
