--- a/pageRealSLanding/css/styles.css
+++ b/pageRealSLanding/css/styles.css
@@ -646,7 +646,7 @@ footer .copyright {
     top: 5vh;
     left: 5%;
     width: 90%;
-    height: 90vh;
+    /* height: 90vh; */
     background-color: white;
     z-index: 100;
     overflow: hidden;
@@ -665,6 +665,7 @@ footer .copyright {
     top: 0;
     left: 0;
     width: 100%;
+    transition: 900ms all ease-in-out;
 }
 
 .carousel .slide img {
